# technology_economics

./: LICENSE  README.md  pyproject.toml
notebooks/: 01_fixed_proportions.ipynb
