[tool.poetry]
name = "technology-economics"
version = "0.1.0"
description = ""
authors = ["Rodrigo Franco <rodrigo.franco.09@gmail.com>"]
readme = "README.md"
packages = [{include = "technology_economics"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
